(3): Update index.html with HTML code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       .container {
       width: 960px;
       }
+      p.lead {
+      padding-top: 15px;
+      }
       .navigation, .pitch, .section1, .section2, .faq, .footer {
       padding: 10px 0px 10px 0px;
       }
@@ -87,8 +90,13 @@
 	</div>
       <div class="row faq">
 	<div class="span12">
+	  FAQ
+	</div>
+	</div>
+      <div class="row footer">
+	<div class="span12">
 	  Footer
-	  </div>
+	</div>
 	</div>
       </div>
     </body>
