index.html updated with my primal texts and photos

--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>ImSonic</h1>
 	  </div>
 	</div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">An image is worth a thousand . . . Tones </p>
 	  </div>
 	</div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/SSIflOf.jpg">
 	  </div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -160,12 +160,12 @@
 		<!-- linediv-l and linediv-r give dividing lines that look different
 		     in horizontial and vertical layouts, illustrating media queries. -->
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backets</p>
+		  <h3>1000</h3> <p>backers</p>
 		  </div>
 		</div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$6000</h3> <p>of $300</p>
 		  </div>
 		</div>
 	      <div class="span4">
@@ -203,11 +203,13 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x380">
+	  <img class="img-polaroid" src="http://i.imgur.com/xU06R3B.jpg">
 	  </div>
 	<div class="span5 copy">
 	  <p>
-	    This a text
+	    Have you ever imagined music as an image? </br></br>
+	    Have you ever imagined drawing with Tones </br> and listening to a series of Colors?</br></br>
+	    Is it possible that images could be the alter ego of an image? </br>
 	    </p>
 	  </div>
 	</div>
@@ -215,11 +217,18 @@
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-	    This is a text 2
+	    Now there is a way! </br>
+	    For years music and images were joined together in</br> 
+	    films, plays, etc. in order to enhance their content. </br>
+	    ImSonic is the bridge between image and music. </br>
+	    It captures music in all its aspects</br>
+	    and expresses it by image.</br></br>
+	    If you'd like to see what your favourite song looks like,</br>
+	     <h3> You can preorder a copy!</h3> </br>
 	    </p>
 	  </div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/AaeCD2A.jpg">
 	  </div>
 	</div>
 
@@ -233,24 +242,26 @@
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  Which platforms does ImSonic support?
 		  </a>
 		</div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  The first version is designed for iOS and Windows (PC), but an </br>
+		  Android version is in plan for the future. 
 		  </div>
 		</div>
 	      </div>
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		  What's a Frequently Asked Question?
+		  Where can I purchase a copy? 
 		  </a>
 		</div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  The iOS version can be purchased only from itunes. The windows version</b>
+                  can be purchased and downloaded directly from this website.  
 		  </div>
 		</div>
 	      </div>
@@ -261,14 +272,14 @@
 
       <!-- Not crucial, but we put this under a CC By-SA 3.0 licence. -->
       <!-- http://creativecommons.org/licences/ -->
-      <div class="row-fluid footer">
+ <!--     <div class="row-fluid footer">
 	<div class="span12">
 	  <p>This work is licenced under
 	    the <a href="http://creativecommons.org/licences/by-sa/3.0/">CC By-SA 3.0 </a>, without all the cruft
 	    that would otherwise be put at the bottom of the page. </p>
 		     </div>
 	</div>
-      </div>
+      </div>  -->
     
 
 
