--- a/index.html
+++ b/index.html
@@ -149,13 +149,14 @@
 	</div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://i.imgur.com/SSIflOf.jpg">
+	  <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/SSIflOf.jpg">
 	  </div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
 	<div class="span5 actions">
+	  <div class="row-fluid">
 	  <div class="span8 offset2">
-	    <div class="statistics">
+	    <div class="row-fluid statistics">
 	      <div class="span4">
 		<!-- linediv-l and linediv-r give dividing lines that look different
 		     in horizontial and vertical layouts, illustrating media queries. -->
@@ -175,6 +176,7 @@
 		</div>
 	      </div>
 	    </div>
+	  <div class="row-fluid">
 	  <div class="span10 offset1">
 	    <!-- Bootstrap progress bar -->
 	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -183,17 +185,23 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	      </div>
 	    </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
 	    <!-- Standard Bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
 	    <button class="btn btn-success btn-large">Preorder</button>
 	    </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <!-- Social buttons are not included in default Bootstrap. -->
 	    <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	    </div>
+	  </div>
+	</div>
 	  </div>
 	</div>
 
@@ -203,7 +211,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://i.imgur.com/xU06R3B.jpg">
+	  <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/xU06R3B.jpg">
 	  </div>
 	<div class="span5 copy">
 	  <p>
@@ -228,7 +236,7 @@
 	    </p>
 	  </div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://i.imgur.com/AaeCD2A.jpg">
+	  <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/AaeCD2A.jpg">
 	  </div>
 	</div>
 
